Setup project for frontend integration